amend values based on external config